[package]
name = "my_first_voxel_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "time",
]}
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"

